MacViews: Don't InsertChar() for consumed events.

Currently, BridgedContentView ignores KeyEvent::handled() when
processing a key event both as a KeyDown and as text input. Handling
should only proceed to text input when the event isn't handled after
first being sent to OnKeyEvent handlers.

Otherwise, it means a <space> on a control that causes a textfield to be
focused will also send that space as input to the textfield.

BUG=732229

Review-Url: https://codereview.chromium.org/2973463002
Cr-Commit-Position: refs/heads/master@{#484475}

Former-commit-id: a42d24fc97610d00ddf15722e14aa0f413e56561